--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
+# Dependencies
 node_modules/
+backend/node_modules/
 
 # Expo
 .expo/
@@ -9,35 +8,63 @@ dist/
 web-build/
 expo-env.d.ts
 
-# Native
-.kotlin/
+# Native builds
 *.orig.*
 *.jks
 *.p8
 *.p12
 *.key
 *.mobileprovision
+.kotlin/
+
+# Generated native folders
+/ios
+/android
 
 # Metro
 .metro-health-check*
 
-# debug
+# Debug logs
 npm-debug.*
 yarn-debug.*
 yarn-error.*
+
+# Environment variables (keep .example files)
+.env
+.env.local
+.env.*.local
+backend/.env
+
+# Explicitly track example env files
+!.env.example
+!backend/.env.example
 
 # macOS
 .DS_Store
 *.pem
 
-# local env files
-.env*.local
-
-# typescript
+# TypeScript
 *.tsbuildinfo
 
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*.sublime-*
+
+# Expo example app
 app-example
 
-# generated native folders
-/ios
-/android
+# Claude Code
+.claude/
+
+# Logs
+logs/
+*.log
+
+# Coverage
+coverage/
+
+# Build outputs
+build/
